# flerovio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: INSTALACION.md
packaging/windows/: empaquetar.bat  flerovio.iss  flerovio.spec
src/flerovio/: __init__.py  __main__.py
src/flerovio/nucleo/: configuracion.py  credenciales.py  excepciones.py  registro.py  rutas.py
src/flerovio/servicios/: actualizaciones.py  cliente_api.py  modelos.py
src/flerovio/ui/: dialogo_acerca_de.py  dialogo_actualizacion.py  dialogo_login.py  ventana_principal.py
tests/: conftest.py  test_actualizaciones.py  test_app.py  test_cliente_api.py  test_configuracion.py  test_credenciales.py  test_dialogo_login.py  test_excepciones.py  test_registro.py
