[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flerovio"
version = "0.1.0"
description = "Reemplazo de cromo escritorio — extensión para Semántica ERP - Transporte"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Flerovio" }]
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.7",
    "httpx>=0.27",
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-qt>=4.4",
    "pyinstaller>=6.10",
]

[project.scripts]
flerovio = "flerovio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flerovio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
